--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ branches:
   only:
   - dev
 before_install:
-- openssl aes-256-cbc -K $encrypted_91efcd0a5e7b_key -iv $encrypted_91efcd0a5e7b_iv
-  -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_e12a9a075ea1_key -iv $encrypted_e12a9a075ea1_iv
+  -in .travis/travis.enc -out ~/.ssh/id_rsa -d
 - export TZ='Asia/Shanghai'
 - npm install -g hexo
 - chmod 600 ~/.ssh/id_rsa
