--- a/_config.yml
+++ b/_config.yml
@@ -76,5 +76,5 @@ theme: jacman
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com/pyclear/pyclear.github.io.git
+  repo: git@github.com:pyclear/pyclear.github.io.git
   branch: master
