--- a/themes/cactus-dark/_config.yml
+++ b/themes/cactus-dark/_config.yml
@@ -3,6 +3,7 @@ nav:
   About: /about/
   Writing: /archives/
   Projects: http://github.com/pyclear
+  Links: /links/
 
 projects_url: http://github.com/pyclear
 
