--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Pyclear
+title: Pyclearl
 subtitle: When in doubt, use brute force.
 description: Python后端,喜欢Elixir。
 author: Pyclearl
