--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Pyclearl
 subtitle: When in doubt, use brute force.
-description: Python后端,喜欢Elixir。
+description: WEB后端, 在玩Elixir。
 author: Pyclearl
 language: zh-Hans
 timezone:
