--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -136,7 +136,7 @@ links_title: Links
 links_layout: block
 #links_layout: inline
 links:
-  Title: http://example.com/
+  the5fire: https://www.the5fire.com
 
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
