--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -649,7 +649,7 @@ vendors:
   _internal: lib
 
   # Internal version: 2.1.3
-  jquery:
+  jquery: //cdn.bootcss.com/jquery/2.1.3/jquery.js
 
   # Internal version: 2.1.5
   # See: http://fancyapps.com/fancybox/
