--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ public_dir: public
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
+friend_dir: friends
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
