--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Pyclearl
-subtitle: Do the right thing, Wait to get fired.
-description: Python Backend Developer.
+title: 世界的过客
+subtitle: 每个人获得的东西都恰好是他值得获得的东西
+description:
 author: Pyclearl
 language: zh-CN
 timezone:
