--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 世界的过客
 subtitle: 每个人获得的东西都恰好是他值得获得的东西
-description:
+description: Pythonista
 author: Pyclearl
 language: zh-CN
 timezone:
