--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-generator-search": "^2.2.5",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-scss": "^1.2.0",
     "hexo-pagination": "^0.1.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
