--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ branches:
   only:
   - dev
 before_install:
-- openssl aes-256-cbc -K $encrypted_e12a9a075ea1_key -iv $encrypted_e12a9a075ea1_iv
-  -in .travis/travis.enc -out ~/.ssh/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_9e29e8b20af0_key -iv $encrypted_9e29e8b20af0_iv -in .travis/travis_key.enc -out ~/.ssh/travis_key -d
 - export TZ='Asia/Shanghai'
 - npm install -g hexo
 - chmod 600 ~/.ssh/id_rsa
