--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_9e29e8b20af0_key -iv $encrypted_9e29e8b20af0_iv -in .travis/travis_key.enc -out ~/.ssh/travis_key -d
 - export TZ='Asia/Shanghai'
 - npm install -g hexo
-- chmod 600 ~/.ssh/id_rsa
+- chmod 600 ~/.ssh/travis_key
 - eval $(ssh-agent -s)
 - ssh-add ~/.ssh/id_rsa
 - cp .travis/ssh_config  ~/.ssh/config
