--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   "dependencies": {
     "hexo": "^3.7.1",
     "hexo-deployer-git": "^1.0.0",
-    "hexo-prism-plugin": "^2.3.0",
     "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-category": "^0.1.3",
-    "hexo-generator-search": "^2.2.5",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-search": "^2.2.5",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-scss": "^1.2.0",
     "hexo-pagination": "^0.1.0",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "node-gyp": "^6.0.0",
+    "hexo-renderer-scss": "^1.2.0",
   }
 }
